[metadata]
name = scyjava
author = Curtis Rueden, Philipp Hanslovsky, Edward Evans, Mark Hiner, Gabriel Selzer
author_email = ctrueden@wisc.edu
description = Supercharged Java access from Python
long_description = file: README.md
long_description_content_type = text/markdown
license= The Unlicense
url = https://github.com/scijava/scyjava
project_urls =
    Bug Tracker = https://github.com/scijava/scyjava/issues
    Documentation = https://github.com/scijava/scyjava/blob/master/README.md
    Source Code = https://github.com/scijava/scyjava
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
# Ensure any changes to this list are also added to environment.yml AND environment-test.yml!
python_requires = >=3.7
install_requires =
    jpype1 >= 1.3.0
    jgo

[options.packages.find]
where = src

[options.extras_require]

# Ensure any changes to this list are also added to environment-test.yml!
dev =
    black
    build
    pytest
    pytest-cov
    numpy
    pandas
    setuptools-scm >= 6.2

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203
